# game_userver

./: .clang-format  .clangd  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  Dockerfile  GAME_SETUP_GUIDE.md  Makefile  QUICK_REFACTORING_STEPS.md  README.md  REFACTORING_GUIDE.md  TELEGRAM_BOT_README.md  create_test_data.py  diff.diff  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.yml  run-dev.sh  run-prod.sh  run_as_user.sh  stop-dev.sh  stop-prod.sh  telegram_bot.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
docs/: DATABASE_VIEWS.md  GAME_FLOW.md  OBSERVER_IMPLEMENTATION.md  OBSERVER_PATTERN.md  OBSERVER_QUICK_START.md  OBSERVER_SUMMARY.md  README.md  development_setup.md  editor_setup.md  setup_guide.md
examples/: grpc_client_example.py  requirements.txt
game_bot/: bot.py  requirements.txt
postgresql/schemas/: apply_views.sh  db_1.sql  views.sql
proto/handlers/: cruds.proto
proto/models/: game.proto  models.proto
scripts/: build.sh  setup_dev_env.sh
src/: main.cpp
src/benchmarks/: greeting_benchmark.cpp
src/components/hello_grpc/: hello_grpc.cpp  hello_grpc.hpp
src/handlers/: component_list.cpp  component_list.hpp
src/handlers/content_handling/: component_list.cpp  component_list.hpp
src/handlers/content_handling/pack/: component_list.cpp  component_list.hpp  create.cpp  create.hpp  create_pack.cpp  create_pack.hpp  create_pack_from_yaml.cpp  create_pack_from_yaml.hpp  get.cpp  get_all_packs.cpp  get_all_packs.hpp  get_pack_by_id.cpp  get_pack_by_id.hpp
src/handlers/content_handling/question/: component_list.cpp  component_list.hpp  create_question.cpp  create_question.hpp  get_question_by_id.cpp  get_question_by_id.hpp  get_questions_by_pack_id.cpp  get_questions_by_pack_id.hpp
src/handlers/content_handling/variant/: component_list.cpp  component_list.hpp  create_variant.cpp  create_variant.hpp  get_variant_by_id.cpp  get_variant_by_id.hpp  get_variants_by_question_id.cpp  get_variants_by_question_id.hpp
src/handlers/game/: add_player.cpp  add_player.hpp  component_list.cpp  component_list.hpp  create_game_session.cpp  create_game_session.hpp  get_current_question.cpp  get_current_question.hpp  get_game_results.cpp  get_game_results.hpp  get_game_state.cpp  get_game_state.hpp  start_game.cpp  start_game.hpp  submit_answer.cpp  submit_answer.hpp
src/handlers/grpc/: component_list.cpp  component_list.hpp  service.cpp  service.hpp
src/handlers/grpc/pack/: create_pack.cpp  create_pack.hpp  responce.cpp  responce.hpp
src/handlers/hello/: component_list.cpp  component_list.hpp  hello.cpp  hello.hpp
src/handlers/hello_postgres/: component_list.cpp  component_list.hpp  hello_postgres.cpp  hello_postgres.hpp
src/logic/game/: game.cpp  game.hpp  game_events.hpp  game_observer.hpp
src/logic/game/observers/: examples.hpp  logging_observer.hpp  notification_observer.hpp  statistics_observer.hpp
src/logic/greeting/: greeting.cpp  greeting.hpp
src/models/: game_session.cpp  game_session.hpp  pack.cpp  pack.hpp  player.cpp  player.hpp  player_answer.cpp  player_answer.hpp  question.cpp  question.hpp  variant.cpp  variant.hpp
src/queries/: add_player.sql  advance_to_next_question.sql  create_game_session.sql  create_pack.sql  create_question.sql  create_variant.sql  delete_pack.sql  end_game_session.sql  get_all_game_sessions.sql  get_all_packs.sql  get_answers_count_for_question.sql  get_game_session_by_id.sql  get_pack_by_id.sql  get_player_answers_by_player_id.sql  get_player_by_id.sql  get_players_by_game_session_id.sql  get_question_by_id.sql  get_questions_and_variants_by_pack_id.sql  get_questions_by_pack_id.sql  get_variant_by_id.sql  get_variants_by_question_id.sql  is_variant_correct.sql  start_game_session.sql  submit_player_answer.sql  update_game_session_current_question_index.sql  update_pack_title.sql  update_player_score.sql
src/services/: component_list.cpp  component_list.hpp  pack_service.cpp  pack_service.hpp  question_service.cpp  question_service.hpp  variant_service.cpp  variant_service.hpp
src/storage/: game_sessions.cpp  game_sessions.hpp  get_all_packs.cpp  get_all_packs.hpp  packs.cpp  packs.hpp  pasks.cpp  pasks.hpp  player_answers.cpp  player_answers.hpp  players.cpp  players.hpp  questions.cpp  questions.hpp  questions_and_variants.cpp  questions_and_variants.hpp  variants.cpp  variants.hpp
src/utils/: constants.hpp  pack.cpp  pack.hpp  question.cpp  question.hpp  string_to_uuid.cpp  string_to_uuid.hpp  variant.cpp  variant.hpp
telegram_bot/: .env.example  CHANGELOG.md  QUICKSTART.md  README.md  bot.py  pyproject.toml
tests/: conftest.py
tests/basic/: test_grpc.py  test_postgres.py
tests/handlers/: test_pack.py  test_question.py  test_variant.py
tests/handlers/grpc/: test_game_session.py  test_service.py
tests/helpers/: endpoints.py  utils.py  validators.py
tests/unit/: greeting_test.cpp  string_to_bool_test.cpp  string_to_uuid_test.cpp
