[tool.poetry]
name = "game-quiz-telegram-bot"
version = "1.0.0"
description = "Telegram bot for quiz game powered by userver backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bot.py"}]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot:main"